--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,13 @@ code {
   font-family: 'Roboto', sans-serif;
 
 }
+
+
+@media only screen and (max-width: 748px) {
+
+  body, html {
+    overflow-x: hidden;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+}
